# cpp19

hw_01/: Makefile  Makefile~  README.md
hw_01/include/: bmp.h
hw_01/src/: bmp.c  main.c
hw_02/: CMakeLists.txt  README.md
hw_02/include/: Board.h  BoardTest.h  StdioBoardView.h  Test.h
hw_02/src/: Board.cpp  StdioBoardView.cpp  main.cpp
hw_02/test/: BoardTest.cpp  Test.cpp
hw_03/: CMakeLists.txt
hw_03/include/: CLI.h  HuffmnaAchiever.h
hw_03/src/: CLI.cpp  HuffmnaAchiever.cpp  main.cpp
hw_03/test/: TestMain.cpp
lab_01/: README.md
lab_01/correct/: Makefile~
lab_01/multiple/: Makefile
lab_02/: Makefile  README.md
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile  Makefile~  README.md  commands
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile  README.md
lab_04/include/: mergesort.h  my_memcpy.h
lab_04/src/: main.c  mergesort.c  my_memcpy.c
lab_05/: Makefile  README.md  test.txt
lab_05/include/: clist.h  point_list.h
lab_05/src/: clist.c  main.c  point_list.c
lab_09/: Makefile  README.md
lab_09/include/: matrix.hpp  shared_ptr.hpp
lab_09/src/: main.cpp  matrix.cpp  shared_ptr.cpp
lab_10/: README.md
lab_10/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab_10/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab_11/: CMakeLists.txt  README.md
lab_11/include/: bin_manip.h  employees.h
lab_11/src/: bin_manip.cpp  employees.cpp  main.cpp
lab_13/: CMakeLists.txt
lab_14/: CMakeLists.txt
lab_16/: CMakeLists.txt
(+14 files in other folders)
